--- a/assets/plugins/bootstrap-daterangepicker/bower.json
+++ b/assets/plugins/bootstrap-daterangepicker/bower.json
@@ -1,9 +1,8 @@
 {
   "name": "bootstrap-daterangepicker",
-  "version": "1.3.21",
   "main": [
     "daterangepicker.js",
-    "daterangepicker-bs3.css"
+    "daterangepicker.css"
   ],
   "ignore": [
     "**/.*",
@@ -15,7 +14,7 @@
     "moment.min.js"
   ],
   "dependencies": {
-    "jquery": ">=1.10",
-    "moment": "~2.9.0"
+    "jquery": "1.9.1 - 3",
+    "moment": ">=2.9.0"
  }
 }
